[gd_scene load_steps=3 format=3 uid="uid://chajjltcxreah"]

[ext_resource type="Script" path="res://autotrader/adverts_panel.gd" id="1_jiw5c"]
[ext_resource type="Texture2D" uid="uid://uffmdimoiros" path="res://textures/vehicles/hatchback.png" id="2_02iys"]

[node name="AdvertsPanel" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("1_jiw5c")

[node name="AdvertHBox" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 150)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="AdvertHBox"]
layout_mode = 2
texture = ExtResource("2_02iys")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AdvertHBox"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="LaneLabel" type="RichTextLabel" parent="AdvertHBox/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]1"

[node name="VBoxContainer2" type="VBoxContainer" parent="AdvertHBox"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ValuationLabel" type="RichTextLabel" parent="AdvertHBox/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]£0"

[node name="VBoxContainer3" type="VBoxContainer" parent="AdvertHBox"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="OfferLabel" type="RichTextLabel" parent="AdvertHBox/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]£23000"

[node name="Button" type="Button" parent="AdvertHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "SELL! 
SELL! 
SELL!"

[connection signal="pressed" from="AdvertHBox/Button" to="." method="_on_button_pressed"]
